# memtrace2npz

./: .gitignore  MANIFEST.in  README.md  setup.cfg
memtrace2npz/: __init__.py
memtrace_to_npz/: __init__.py
tests/: test_conversion.py
tests/data/: ABOUT.md  gold.npz
