[metadata]
# replace with your username:
name = memtrace-to-csv
version = 0.0.1
author = Patrick Lavin
author_email = plavin997@gmail.com
description = A package for converting binary output of DynamoRIO's memtrace client to csv.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
