[metadata]
# replace with your username:
name = memtrace-to-csv
version = 0.0.1
author = Patrick Lavin
author_email = plavin997@gmail.com
description = A package for converting binary output of DynamoRIO's memtrace client to csv.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/plavin/memtrace-to-csv
project_urls =
    Bug Tracker = https://github.com/plavin/memtrace-to-csv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
scripts =
    bin/memtrace-to-npz

[options.packages.find]
where = src
