[metadata]
# replace with your username:
name = memtrace2npz
version = 0.0.1
author = Patrick Lavin
author_email = plavin997@gmail.com
description = A package for converting binary output of DynamoRIO's memtrace client to npz.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/plavin/memtrace2npz
project_urls =
    Bug Tracker = https://github.com/plavin/memtrace2npz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
    numpy
scripts =
    bin/memtrace2npz

[options.packages.find]
where =
